deploy/k8s/base/kms/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kms
  labels:
    app.kubernetes.io/part-of: iotgw-ng
